@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.0-6.011
-Date: 2023-03-07
+Version: 3.0-6.012
+Date: 2023-03-11
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -56,7 +56,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 3.0), spatstat.geom (>= 3.0-5), spatstat.random (>= 3.1), stats, graphics, grDevices, utils, methods, nlme
-Imports: spatstat.utils (>= 3.0-1.004), spatstat.sparse (>= 3.0), goftest (>= 1.2-2), Matrix, abind
+Imports: spatstat.utils (>= 3.0-2), spatstat.sparse (>= 3.0), goftest (>= 1.2-2), Matrix, abind
 Suggests: sm, maptools (>= 0.9-9), gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.0-4), spatstat.model (>= 3.2-1), spatstat (>= 3.0-3)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
 	     spatial data, mainly spatial point patterns,
