@@ -2,4 +2,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
 "2022-11-08" "3.0-4" 226 507 0 30638 6295
 "2023-01-26" "3.0-6" 226 507 0 30644 6295
-"2023-03-07" "3.0-6.011" 227 508 0 30725 6295
+"2023-03-11" "3.0-6.012" 227 508 0 30724 6295
